--- a/public/css/parts_of_the_website/main/style.css
+++ b/public/css/parts_of_the_website/main/style.css
@@ -71,13 +71,13 @@ main .wrapper {
     justify-content: space-between;
 }
 
-main .wrapper1 {
+main .slide > div:nth-of-type(1) .wrapper {
     width: 82%;
     margin-top: 435px;
 }
 
-main .wrapper2,
-main .wrapper3 {
+main .slide > div:nth-of-type(2) .wrapper,
+main .slide > div:nth-of-type(3) .wrapper {
     margin-top: 190px;
     width: 90%;
 
@@ -90,8 +90,8 @@ main .game-name {
     font-weight: 600;
 }
 
-main .slide .wrapper2 .game-name,
-main .slide .wrapper3 .game-name{
+main .slide > div:nth-of-type(2) .wrapper .game-name,
+main .slide > div:nth-of-type(3) .wrapper .game-name{
     font-size: 19px;
 }
 
